k8-ingress/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: k-minion1
  name: k-minion1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k-minion1
    spec:
      containers:
        - name: k-minion1
          image: api_metrics_poetisa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
