k8-ingress/api-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: k-minion1
#   labels:
#     app: k-minion1
# spec:
#   selector:
#     app: k-minion1
#   ports:
#   - name: "80"
#     port: 80
#     targetPort: 80
#     nodePort: 30500
#   type: "NodePort"
  

apiVersion: v1
kind: Service
metadata:
  name: k-minion1
  labels:
    app: k-minion1
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: k-minion1
