k8-ingress/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k-minion1-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.metrics.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k-minion1
          servicePort: 80
